More additions to admin panel and stylistic changes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
 <div id="navbar"></div>
-<div id="main"></div>
+<div class="border">
+    <div class='margin'>
+        <div class="text">
+            <center>
+                <h1 style="text-transform: uppercase">The Power of Why</h1>
+            </center>
+        </div>
+        <div id="main"></div>
+    </div>
+</div>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/js/main.bundle.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/js/navbar.bundle.js') }}"></script>
 </body>
