--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Admin Sign In</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <title>Admin Panel</title>
 </head>
 <body>
 <div id="navbar"></div>
 <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
-<div id="foo"/>
+<div class="border">
+    <div class='margin'>
+        <div class="text">
+            <center>
+                <h1 style="text-transform: uppercase">Admin Panel</h1>
+            </center>
+        </div>
+        <div id="foo"></div>
+    </div>
+</div>
 <script>
     var config = {
         apiKey: "AIzaSyAoMDi3nrfpQgE3rtbptQF4vLVSzd-GE-4",
@@ -20,14 +30,12 @@
     firebase.initializeApp(config);
     firebase.auth().onAuthStateChanged(function (user) {
         if (user) {
-            var authenticated = true
             document.getElementById("foo").innerHTML = '<div id="admin_panel"></div>';
+
         }
         else{
-            var authenticated = false
             document.getElementById("foo").innerHTML = '<div id="signin"></div>';
         }
-        console.log(authenticated)
     });
 </script>
 
