--- a/app/templates/admin_edit.html
+++ b/app/templates/admin_edit.html
@@ -11,10 +11,10 @@
     <div class='margin'>
         <div class="text">
             <center>
-                <h1 style="text-transform: uppercase">User Suggestion</h1>
+                <h1 style="text-transform: uppercase">Category to edit</h1>
             </center>
         </div>
-        <div id="admin_suggestion"></div>
+        <div id="admin_edit"></div>
     </div>
 </div>
 <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
@@ -38,6 +38,6 @@
     var answer_key = "{{ key }}";
 </script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/js/navbar.bundle.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='scripts/js/admin_suggestion.bundle.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/js/admin_edit.bundle.js') }}"></script>
 </body>
 </html>
