--- a/app/templates/admin_edit_question_specific.html
+++ b/app/templates/admin_edit_question_specific.html
@@ -11,17 +11,17 @@
     <div class='margin'>
         <div class="text">
             <center>
-                <h1 style="text-transform: uppercase">{{ type }} questions</h1>
+                <h1 style="text-transform: uppercase">Edit Question</h1>
             </center>
         </div>
-        <div id="questions"></div>
+        <div id="admin_edit_question_specific"></div>
     </div>
 </div>
-
 <script>
+    var answer_key = "{{ key }}";
     var question_type = "{{ type }}";
 </script>
-<script type="text/javascript" src="{{ url_for('static', filename='scripts/js/question_list.bundle.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/js/admin_edit_question_specific.bundle.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/js/navbar.bundle.js') }}"></script>
 </body>
 </html>
