--- a/app/templates/admin_question_suggestion.html
+++ b/app/templates/admin_question_suggestion.html
@@ -14,7 +14,7 @@
                 <h1 style="text-transform: uppercase">User Suggestion</h1>
             </center>
         </div>
-        <div id="admin_suggestion"></div>
+        <div id="admin_question_suggestion"></div>
     </div>
 </div>
 <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
@@ -38,6 +38,6 @@
     var answer_key = "{{ key }}";
 </script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/js/navbar.bundle.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='scripts/js/admin_suggestion.bundle.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/js/admin_question_suggestion.bundle.js') }}"></script>
 </body>
 </html>
