--- a/app/templates/answer.html
+++ b/app/templates/answer.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <title>The Power of Why</title>
 </head>
 <body>
 <div id="navbar"></div>
-<div id="answer"></div>
+<div class="border">
+    <div class='margin'>
+        <div id="answer"></div>
+    </div>
+</div>
 <script>
     var answer_key = "{{ key }}";
     var question_type = "{{ type }}";
