--- a/app/templates/suggestion.html
+++ b/app/templates/suggestion.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <title>Add a question</title>
 </head>
 <body>
 <div id="navbar"></div>
-<h1>Add a question</h1>
-<div id="suggestion"></div>
+<div class="border">
+    <div class='margin'>
+        <div class="text">
+            <center>
+                <h1 style="text-transform: uppercase">Suggest a Question for Review</h1>
+            </center>
+        </div>
+        <div id="suggestion"></div>
+    </div>
+</div>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/js/suggestion.bundle.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/js/navbar.bundle.js') }}"></script>
 </body>
